Add Testing Dependencies, Jacoc coverage of 70%